@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3142 2019/07/31 15:53:04 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3143 2019/07/31 15:55:32 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5099,3 +5099,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated devel/R-rlang to 0.4.0 [brook 2019-07-31]
 	Updated finance/R-TTR to 0.23.4 [brook 2019-07-31]
 	Updated finance/R-quantmod to 0.4.15 [brook 2019-07-31]
+	Updated finance/R-tseries to 0.10.47 [brook 2019-07-31]
